internal/xds/translator/testdata/out/xds-ir/http-route-https-mtls-allow-expired-cert.routes.yaml
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/https-mtls-allow-expired
  virtualHosts:
  - domains:
    - gateway.envoyproxy.io
    name: envoy-gateway/gateway-1/https-mtls-allow-expired/gateway_envoyproxy_io
    routes:
    - match:
        prefix: /
      name: httproute/default/httproute-1/rule/0/match/0/gateway_envoyproxy_io
      route:
        cluster: httproute/default/httproute-1/rule/0
        upgradeConfigs:
        - upgradeType: websocket
